--- a/css/popup.css
+++ b/css/popup.css
@@ -1,33 +1,34 @@
 .container {
 	width: 300px;
-	height: 150px;
+	height: 80px;
 	text-align: center;
 }
 .screenshot-btn {
 	display: inline-block;
-	width: 100px;
-	height: 100px;
-	background-color: #3385ff;
-	border-radius: 50%;
+	/*width: 100px;*/
+	border: 1px solid #000;
+	background-color: #a4efbc;
 	cursor: pointer;
 	text-align: center;
 	margin: 0 15px;
 	margin-top: 25px;
 }
 .screenshot-btn p {
-	height: 100px;
-	line-height: 100px;
+	height: 30px;
+	line-height: 30px;
 	margin: 0;
-	color: #fff;
+	/*color: #fff;*/
 }
 .screenshot-btn:hover {
-	background-color: #2d78f4;
+	/*background-color: #2d78f4;*/
 }
 
 .ocr p{
 	border:1px solid #000000;
 	cursor: pointer;
+	background-color: #ffef83;
 }
+
 .operation{
 	column-count: 2;
 }
@@ -49,6 +50,8 @@
 .switch{
 	border:1px solid #000000;
 	cursor: pointer;
+	background-color: #a4efbc;
+
 }
 .clear-video{
 
@@ -57,10 +60,14 @@
 	cursor: pointer;
 }
 .video-req{
-	 border:1px solid #000000;
-	 cursor: pointer;
+	border:1px solid #000000;
+	cursor: pointer;
+	background-color: #ffef83;
+	margin: 5px 0;
  }
-
+/*.video-req p{*/
+/*	color: #fff;*/
+/*}*/
 .text-control{
 	width: 80px;
 	column-count: 1;
@@ -75,12 +82,27 @@
 	cursor: pointer;
 }
 .clear-text{
-
-
+	border:1px solid #000000;
+	cursor: pointer;
+	margin: 5px 0;
+}
+.copy-text{
+	border:1px solid #000000;
+	cursor: pointer;
+	margin: 5px 0;
+}
+.tran{
 	border:1px solid #000000;
 	cursor: pointer;
 }
 .text-area{
 	display: flex;
 	justify-content: space-around;
+}
+
+.open{
+	border:1px solid #000000;
+	cursor: pointer;
+	width: 180px;
+	float: right;
 }
